# ohttp

./: .gitignore  Cargo.toml  Makefile  README.md  demo.py  pre-commit  release.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: check.yml
.streamlit/: config.toml
bhttp/: Cargo.toml
bhttp-bin/: Cargo.toml
bhttp-bin/src/: main.rs
bhttp-convert/: Cargo.toml
bhttp-convert/src/: main.rs
bhttp/src/: err.rs  lib.rs  parse.rs  rw.rs
bhttp/src/http_compat/: decode.rs  encode.rs  mod.rs
bhttp/src/stream/: context.rs  future.rs  int.rs  mod.rs  vec.rs
bhttp/tests/: test.rs
cgpuvm-attest/: Cargo.toml
cgpuvm-attest-cli/: Cargo.toml
cgpuvm-attest-cli/src/: main.rs
cgpuvm-attest/src/: lib.rs  main.rs
docker/: Dockerfile  docker-compose-faster-whisper.yml  docker-compose-http.yml  docker-compose-server.yml  docker-compose-streaming.yml  docker-compose-whisper.yml  docker-compose.yml  run.sh
docker/client/: Dockerfile  run.sh
docker/server/: Dockerfile  run.sh
docker/streaming/: Dockerfile  docker-compose.yml  server.mjs
docker/whisper/: Dockerfile  app.py
examples/: audio.py  audio.txt  chunked.txt  kms.pem  request.txt  response.txt
ohttp/: Cargo.toml  build.rs
ohttp-client/: Cargo.toml
ohttp-client-cli/: Cargo.toml
ohttp-client-cli/src/: main.rs
ohttp-client/src/: main.rs
ohttp-server/: .gitignore  Cargo.toml  README.md  ca.sh  libazguestattestation.so.1.0.5
ohttp-server/src/: main.rs
ohttp/bindings/: bindings.toml  nss_hpke.h  nss_p11.h
ohttp/src/: config.rs  crypto.rs  err.rs  hex.rs  hpke.rs  lib.rs  rand.rs  rw.rs  stream.rs
ohttp/src/nss/: aead.rs  err.rs  hkdf.rs  hpke.rs  mod.rs  p11.rs
ohttp/src/rh/: aead.rs  hkdf.rs  hpke.rs  mod.rs
src/: main.rs
sync-async/: Cargo.toml
sync-async/src/: lib.rs
verifier/: Cargo.toml
verifier/src/: err.rs  lib.rs
