[package]
name = "bhttp-convert"
description = "Tool for converting HTTP messages to/from Binary HTTP"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
structopt = "0.3"

[dependencies.bhttp]
path= "../bhttp"
features = ["bhttp", "http"]
