[package]
name = "bhttp-convert"
description = "Simple Tool Converting Between HTTP/1.1 and Binary HTTP"
authors.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
structopt = "0.3"

[dependencies.bhttp]
path= "../bhttp"
features = ["http"]
