[package]
name = "bhttp"
description = "Binary HTTP Messages (RFC 9292)"
authors.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
http = ["dep:url"]

[dependencies]
thiserror = "1"
url = {version = "2", optional = true}

[dev-dependencies]
hex = "0.4"
