[package]
name = "ohttp-client-cli"
version = "0.5.4"
authors = ["Martin Thomson <mt@lowentropy.net>"]
edition = "2021"

[features]
default = ["rust-hpke"]
nss = ["ohttp/nss"]
rust-hpke = ["ohttp/rust-hpke"]

[dependencies]
env_logger = {version = "0.10", default-features = false}
hex = "0.4"

[dependencies.bhttp]
path= "../bhttp"
features = ["http"]

[dependencies.ohttp]
path= "../ohttp"
features = ["client"]
default-features = false
