[package]
name = "ohttp-client-cli"
description = "Test client CLI for Oblivious HTTP"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[features]
default = ["rust-hpke"]
nss = ["ohttp/nss"]
rust-hpke = ["ohttp/rust-hpke"]

[dependencies]
env_logger = {version = "0.10", default-features = false}
hex = "0.4"

[dependencies.bhttp]
path= "../bhttp"
features = ["bhttp", "http"]

[dependencies.ohttp]
path= "../ohttp"
features = ["client"]
default-features = false
