[package]
name = "ohttp-client"
version = "0.5.4"
authors = ["Martin Thomson <mt@lowentropy.net>"]
edition = "2021"

[features]
default = ["rust-hpke"]
nss = ["ohttp/nss"]
rust-hpke = ["ohttp/rust-hpke"]

[dependencies]
env_logger = {version = "0.10", default-features = false}
hex = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
rustls = { version = "0.21.6", features = ["dangerous_configuration"] }
structopt = "0.3"
tokio = { version = "1", features = ["full"] }

[dependencies.bhttp]
path= "../bhttp"
features = ["bhttp", "http"]

[dependencies.ohttp]
path= "../ohttp"
features = ["client"]
default-features = false
