[package]
name = "ohttp-client"
description = "Sample Client for OHTTP"
authors.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["rust-hpke"]
nss = ["ohttp/nss"]
rust-hpke = ["ohttp/rust-hpke"]

[dependencies]
env_logger = {version = "0.10", default-features = false}
hex = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
rustls = { version = "0.21.6", features = ["dangerous_configuration"] }
structopt = "0.3"
tokio = { version = "1", features = ["full"] }

[dependencies.bhttp]
path= "../bhttp"
features = ["http"]

[dependencies.ohttp]
path= "../ohttp"
features = ["client"]
default-features = false
