[package]
name = "ohttp-server"
version = "0.5.3"
authors = ["Martin Thomson <mt@lowentropy.net>"]
edition = "2021"

[features]
default = ["rust-hpke"]
nss = ["ohttp/nss"]
rust-hpke = ["ohttp/rust-hpke"]

[dependencies]
env_logger = {version = "0.10", default-features = false}
hex = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
elliptic-curve = { version = "0.13.8", features = ["jwk"] }
base64-url = "3.0.0"
hpke = {version = "0.12.0", features = ["std","p384"]}
serde_json = "1.0"
serde_cbor = "0.10"
warp = { version = "0.3", features = ["tls"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3.30"
futures = "0.3.30"
log = "0.4.22"
clap = { version = "4.5.18", features = ["derive"] }

[dependencies.bhttp]
path= "../bhttp"
features = ["bhttp", "write-http"]

[dependencies.ohttp]
path= "../ohttp"
features = ["server"]
default-features = false

[dependencies.cgpuvm-attest]
path= "../cgpuvm-attest"
features = []
