[package]
name = "ohttp-server"
version = "0.5.4"
authors = ["Martin Thomson <mt@lowentropy.net>"]
edition = "2021"

[features]
default = ["rust-hpke"]
nss = ["ohttp/nss"]
rust-hpke = ["ohttp/rust-hpke"]

[dependencies]
env_logger = {version = "0.10", default-features = false}
hex = "0.4"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3", features = ["tls"] }

[dependencies.bhttp]
path= "../bhttp"
features = ["http"]

[dependencies.ohttp]
path= "../ohttp"
features = ["server"]
default-features = false
