[package]
name = "ohttp-server"
description = "Test server for Oblivious HTTP"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[features]
default = ["rust-hpke"]
nss = ["ohttp/nss"]
rust-hpke = ["ohttp/rust-hpke"]

[dependencies]
env_logger = {version = "0.11", default-features = false}
hex = "0.4"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3", features = ["tls"] }

[dependencies.bhttp]
path= "../bhttp"
features = ["bhttp", "write-http"]

[dependencies.ohttp]
path= "../ohttp"
features = ["server"]
default-features = false
