[package]
name = "ohttp"
version = "0.5.3"
authors = ["Martin Thomson <mt@lowentropy.net>"]
edition = "2021"
rust-version = "1.63.0"
build = "build.rs"
license = "MIT OR Apache-2.0"
description = "Oblivious HTTP"
repository = "https://github.com/martinthomson/ohttp"

[features]
default = ["client", "server", "rust-hpke"]
app-svc = ["nss"]
client = []
external-sqlite = []
gecko = ["nss", "mozbuild"]
nss = ["bindgen", "regex-mess"]
pq = ["hpke-pq"]
regex-mess = ["regex", "regex-automata", "regex-syntax"]
rust-hpke = ["rand", "aead", "aes-gcm", "chacha20poly1305", "hkdf", "sha2", "hpke"]
server = []

[dependencies]
aead = {version = "0.4", optional = true, features = ["std"]}
aes-gcm = {version = "0.9", optional = true}
byteorder = "1.4"
chacha20poly1305 = {version = "0.8", optional = true}
colored = "2.0.4"
hex = "0.4"
hkdf = {version = "0.11", optional = true}
hpke = {version = "0.12.0", optional = true, default-features = false, features = ["std", "x25519", "p384"]}
lazy_static = "1.4"
log = {version = "0.4", default-features = false}
rand = {version = "0.8", optional = true}
# bindgen uses regex and friends, which have been updated past our MSRV
# however, the cargo resolver happily resolves versions that it can't compile
regex = {version = "~1.9", optional = true}
regex-automata = {version = "~0.3", optional = true}
regex-syntax = {version = "~0.7", optional = true}
sha2 = {version = "0.9", optional = true}
thiserror = "1"
futures-util = "0.3.30"
futures = "0.3.30"
bytes = "1.7.2"
async-stream = "0.3.5"

[dependencies.hpke-pq]
package = "hpke_pq"
version = "0.11.0"
git = "https://github.com/bwesterb/rust-hpke"
#branch = "xyber768d00"
rev = "4e7e359fb7f86d4fa42e1bc38fad7f5c6b224a07"
optional = true
default-features = false
features = ["std", "x25519", "xyber768d00"]

[build-dependencies]
mozbuild = {version = "0.1", optional = true}
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"

[build-dependencies.bindgen]
version = "0.69"
default-features = false
optional = true
features = ["runtime"]

[dev-dependencies]
env_logger = {version = "0.10", default-features = false}
