[package]
name = "sync-async"
description = "Synchronous Helpers for Async Code"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
futures = "0.3"
pin-project = "1.1"